--- a/first_project/CMakeLists.txt
+++ b/first_project/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   nav_msgs
   sensor_msgs
+  tf
 )
 
 catkin_package(
@@ -32,3 +33,5 @@ include_directories(
 )
 add_executable(gps_to_odom src/gps_to_odom.cpp)
 target_link_libraries(gps_to_odom ${catkin_LIBRARIES})
+add_executable(odom_to_tf src/odom_to_tf.cpp)
+target_link_libraries(odom_to_tf ${catkin_LIBRARIES})
