--- a/first_project/CMakeLists.txt
+++ b/first_project/CMakeLists.txt
@@ -12,6 +12,11 @@ find_package(catkin REQUIRED COMPONENTS
   nav_msgs
   sensor_msgs
   tf
+  dynamic_reconfigure
+)
+generate_dynamic_reconfigure_options(
+  cfg/lidarRemap.cfg
+  
 )
 
 catkin_package(
@@ -35,3 +40,7 @@ add_executable(gps_to_odom src/gps_to_odom.cpp)
 target_link_libraries(gps_to_odom ${catkin_LIBRARIES})
 add_executable(odom_to_tf src/odom_to_tf.cpp)
 target_link_libraries(odom_to_tf ${catkin_LIBRARIES})
+
+add_executable(lidar_remap src/lidar_remap.cpp)
+add_dependencies(lidar_remap ${PROJECT_NAME}_gencfg)
+target_link_libraries(lidar_remap ${catkin_LIBRARIES})
