--- a/first_project/CMakeLists.txt
+++ b/first_project/CMakeLists.txt
@@ -1,12 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(first_project)
 
-## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
-
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   nav_msgs
@@ -16,24 +10,11 @@ find_package(catkin REQUIRED COMPONENTS
 )
 generate_dynamic_reconfigure_options(
   cfg/lidarRemap.cfg
-  
 )
 
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES first_project
-#  CATKIN_DEPENDS roscpp
-#  DEPENDS system_lib
-)
+catkin_package()
 
-###########
-## Build ##
-###########
-
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
 include_directories(
-# include
   ${catkin_INCLUDE_DIRS}
 )
 add_executable(gps_to_odom src/gps_to_odom.cpp)
